--- a/app/templates/farming-type.njk
+++ b/app/templates/farming-type.njk
@@ -6,7 +6,7 @@
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% block pageTitle %}
-  {{siteTitle}} - Farming type  
+  {{siteTitle}} - Farming type
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="./farming-type" autocomplete="off" novalidate>
+      <form method="POST" action="/water/farming-type" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
