--- a/app/templates/planning-permission.njk
+++ b/app/templates/planning-permission.njk
@@ -18,7 +18,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="./planning-permission" autocomplete="off" novalidate="novalidate">
+      <form method="POST" action="/water/planning-permission" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
