agent business name added

--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -133,6 +133,14 @@
           },
           {
             key: {
+              text: "Contact details"
+            },
+            value: {
+              html: agentBusinessName
+            }
+          },
+          {
+            key: {
               text: "Address"
             },
             value: {
