shift contact details.

--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -133,18 +133,10 @@
           },
           {
             key: {
-              text: "Contact details"
+              text: "Business name"
             },
             value: {
               html: agentBusinessName
-            }
-          },
-          {
-            key: {
-              text: "Address"
-            },
-            value: {
-              html: agentAddressDetails
             }
           },
           {
@@ -153,6 +145,14 @@
             },
             value: {
               html: agentContactDetails
+            }
+          },
+          {
+            key: {
+              text: "Address"
+            },
+            value: {
+              html: agentAddressDetails
             }
           }
         ]
@@ -193,18 +193,18 @@
           },
           {
             key: {
-              text: "Home address"
-            },
-            value: {
-              html: farmerAddressDetails
-            }
-          },
-          {
-            key: {
               text: "Contact details"
             },
             value: {
               html: farmerContactDetails
+            }
+          },
+          {
+            key: {
+              text: "Home address"
+            },
+            value: {
+              html: farmerAddressDetails
             }
           }
         ]
