--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -16,7 +16,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="./SSSI" autocomplete="off" novalidate>
+      <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate>
         {{ crumbToken(crumb) }}
         {{ govukRadios(radios) }}
         {{ govukButton({
