--- a/app/templates/irrigated-crops.njk
+++ b/app/templates/irrigated-crops.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
 {% block pageTitle %}
-  {{siteTitle}} - Irrigated crops 
+  {{siteTitle}} - Irrigated crops
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
@@ -17,7 +17,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="./irrigated-crops" autocomplete="off" novalidate>
+      <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ conditionalButtons(hasScore) }}
