--- a/app/templates/irrigated-land.njk
+++ b/app/templates/irrigated-land.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
 {% block pageTitle %}
-  {{siteTitle}} - Irrigated land  
+  {{siteTitle}} - Irrigated land
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
@@ -16,7 +16,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="./irrigated-land" autocomplete="off" novalidate="novalidate">
+      <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukInput(currentInput) }}
         {{ govukInput(targetInput) }}
