--- a/app/templates/irrigation-systems.njk
+++ b/app/templates/irrigation-systems.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons%}
 {% block pageTitle %}
-  {{siteTitle}} - Irrigation systems  
+  {{siteTitle}} - Irrigation systems
 {% endblock %}
 
 {% block beforeContent %}
@@ -24,7 +24,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="./irrigation-systems" autocomplete="off" novalidate="novalidate">
+      <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(irrigationCurrent) }}
         {{ govukCheckboxes(irrigationPlanned) }}
