--- a/app/templates/next-steps.njk
+++ b/app/templates/next-steps.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  {{siteTitle}} - Next steps 
+  {{siteTitle}} - Next steps
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
@@ -48,7 +48,7 @@
         You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</div>
         {{ govukButton({
           text: "Continue",
-          href: "./business-details"
+          href: nextLink
         }) }}
     </div>
   </div>
