--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -1,7 +1,10 @@
 {% extends "govuk/template.njk" %}
 {% from "govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+
+{% set assetPath = "<%= htmlWebpackPlugin.options.metadata.urlPrefix %>/assets" %}
 {% set siteTitle = "Check if you can apply for a Farming Transformation Fund water grant" %}
+
 {% block pageTitle %}
   {{siteTitle}}
 {% endblock %}
@@ -16,9 +19,9 @@
 
 {% block header %}
   {{ govukHeader({
-    homepageUrl: "./start",
+    homepageUrl: "<%= htmlWebpackPlugin.options.metadata.urlPrefix %>/start",
     serviceName: "Check if you can apply for a Farming Transformation Fund water management grant",
-    serviceUrl: "./start"
+    serviceUrl: "<%= htmlWebpackPlugin.options.metadata.urlPrefix %>/start"
   }) }}
   <div class="govuk-grid-row govuk-width-container">
     {{ govukPhaseBanner({
@@ -45,13 +48,13 @@
   html: '<h2 class="govuk-visually-hidden">Support links</h2>
           <ul class="govuk-footer__inline-list">
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="./accessibility" target="_blank" rel="noopener noreferrer">
+              <a class="govuk-footer__link" href="<%= htmlWebpackPlugin.options.metadata.urlPrefix %>/accessibility" target="_blank" rel="noopener noreferrer">
                 Accessibility
               </a>
             </li>
 
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="./cookies" target="_blank" rel="noopener noreferrer">
+              <a class="govuk-footer__link" href="<%= htmlWebpackPlugin.options.metadata.urlPrefix %>/cookies" target="_blank" rel="noopener noreferrer">
                 Cookies
               </a>
             </li>
@@ -60,7 +63,7 @@
                 Feedback
               </a>
             </li>
-            
+
             <li class="govuk-footer__inline-list-item">
               <a class="govuk-footer__link" href="https://www.gov.uk/government/organisations/rural-payments-agency/about/personal-information-charter" target="_blank" rel="noopener noreferrer">
                 Privacy
