--- a/app/templates/start.njk
+++ b/app/templates/start.njk
@@ -12,11 +12,11 @@
     items: [
       {
         text: "Home",
-        href: "./"
+        href: startLink
       },
       {
         text: "Check if you can apply for a Farming Transformation Fund water management grant",
-        href: "./"
+        href: startLink
       }
     ]
   }) }}
@@ -32,7 +32,7 @@
         <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
       </ul>
       <p>If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.</p>
-      
+
       {{ govukButton({
       classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
       href: button.nextLink,
@@ -45,13 +45,13 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>information about your business (for example, number of employees and turnover)</li>
         <li>information about the project (for example, irrigated land in hectares)</li>
-        <li>an estimated total cost of the items you need</li> 
+        <li>an estimated total cost of the items you need</li>
       </ul>
-      <h2 class="govuk-heading-s">Problems with the service</h2>  
-      <p>If you have any problems with the service, contact the RPA.</p> 
-      <p>Telephone: <b>03000 200 301</b></p> 
-      <p>Monday to Friday, 9am to 5pm (except public holidays)</p> 
-      <p><a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p> 
+      <h2 class="govuk-heading-s">Problems with the service</h2>
+      <p>If you have any problems with the service, contact the RPA.</p>
+      <p>Telephone: <b>03000 200 301</b></p>
+      <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
+      <p><a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
       <p>Email: <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
     </div>
   </div>
