Change Home Address => Address

--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -201,7 +201,7 @@
           },
           {
             key: {
-              text: "Home address"
+              text: "Address"
             },
             value: {
               html: farmerAddressDetails
