--- a/app/templates/components/macro.njk
+++ b/app/templates/components/macro.njk
@@ -8,16 +8,33 @@
 {% macro sideBar(heading, para, items) %}
   <div class="govuk-grid-column-one-third  govuk-!-padding-top-4 govuk-body">
   <hr class="sideBarColor"/>
-        <h2 class="govuk-heading-m" id="subsection-title">
-          {{ heading }}
-        </h2>        
-          <p>{{para  | striptags(true) | escape | nl2br }}</p>
-            <ul class="govuk-list govuk-list--bullet">
-              {% for item in items %}
-                <li>{{ item }}</li>
-              {% endfor %}
-            </ul>
-      </div>
+    <h2 class="govuk-heading-m" id="subsection-title">
+      {{ heading }}
+    </h2>        
+    <p>{{para  | striptags(true) | escape | nl2br }}</p>
+    <ul class="govuk-list govuk-list--bullet">
+      {% for item in items %}
+        <li>{{ item }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+{% endmacro %}
+
+{% macro multiSideBar(sideBars) %}
+  <div class="govuk-grid-column-one-third  govuk-!-padding-top-4 govuk-body">
+  <hr class="sideBarColor"/>
+  {% for sidebar in sideBars %}
+    <h2 class="govuk-heading-m" id="subsection-title">
+      {{ sidebar.heading }}
+    </h2>        
+    <p>{{sidebar.para  | striptags(true) | escape | nl2br }}</p>
+    <ul class="govuk-list govuk-list--bullet">
+      {% for item in sidebar.items %}
+        <li>{{ item }}</li>
+      {% endfor %}
+    </ul>
+  {% endfor %}
+  </div>
 {% endmacro %}
 
 {% macro conditionalButtons (hasScore) %}
