--- a/app/templates/country.njk
+++ b/app/templates/country.njk
@@ -31,7 +31,7 @@
         }) }}
       </form>
     </div>
-    {{ sideBar("Eligibility","This is only for projects in England. 
+    {{ sideBar("Eligibility","This grant is only for projects in England. 
 Scotland, Wales and Northern Ireland have other grants available",[]) }}
   </div>
 {% endblock %}
