--- a/app/templates/session-timeout.njk
+++ b/app/templates/session-timeout.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block pageTitle %}
-  {{siteTitle}} - Problem with service 
+  {{siteTitle}} - Problem with service
 {% endblock %}
 
 {% block content %}
@@ -16,7 +16,7 @@
           <p>For your security, we have deleted your answers.</p>
           {{ govukButton({
             classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
-            href: './farming-type',
+            href: startLink,
             isStartButton: true,
             text: 'Start again'
           }) }}
